[project]
name = "ai-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Adem Usta", email = "mr.usta.adem@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
ai-agents = "ai_agents:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.9.9",
]
