[project]
name = "ai-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Adem Usta", email = "mr.usta.adem@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
ai-agents = "ai_agents:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "mypy>=1.15.0",
    "ruff>=0.9.9",
]

[tool.ruff]
line-length = 100
indent-width = 4
exclude = [".venv"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
ignore = []
select = ["ALL"]

[tool.mypy]
disallow_untyped_defs = true
mypy_path = "stubs"
ignore_missing_imports = false
pretty = true
show_column_numbers = true
