[project]
authors = [{ name = "Adem Usta", email = "mr.usta.adem@gmail.com" }]
dependencies = []
description = "Add your description here"
name = "ai-agents"
readme = "README.md"
requires-python = ">=3.13"
version = "0.1.0"

[project.scripts]
ai-agents = "ai_agents:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = ["jupyter>=1.1.1", "mypy>=1.15.0", "ruff>=0.9.9"]

[tool.ruff]
exclude = [".venv"]
indent-width = 4
line-length = 100

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "double"

[tool.ruff.lint]
ignore = [
    "D100", # Missing docstring in public module
    "D103", # Missing docstring in public function
    "D104", # Missing docstring in public package
    "T201", # Print statements are forbidden
]
select = ["ALL"]

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = false
mypy_path = "stubs"
pretty = true
show_column_numbers = true
